--- a/index.html
+++ b/index.html
@@ -11,12 +11,71 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;900&family=Roboto:wght@400;900&display=swap" rel="stylesheet">
     <title>Boolzap</title>
 </head>
-<body>
+<body class="debug">
 
     <div id="root">
+        <!-- main container  -->
+        <div class="container">
+            <div class="row">
+                <!-- colonna sx  -->
+                <div class="col-1">
+                    <!-- barra utente  -->
+                    <div class="utente">
+
+                        <div class="img-utente">
+                            <img src="img/avatar_2.jpg" alt="">
+                            <span>nome utente</span>
+                        </div>
+
+                        <div class="icone-utente">
+                            <i class="fas fa-circle-notch"></i>
+                            <i class="fas fa-comment-alt"></i>
+                            <i class="fas fa-ellipsis-v"></i>
+                        </div>
+
+                    </div>
+                    <!-- /barra utente  -->
+
+                    <!-- attiva notiiche  -->
+                    <div class="attiva-notifiche">
+                        <div class="icona-bell">
+                           <i class="fas fa-bell-slash"></i>
+                        </div>
+                        <div class="text">
+                            <h4>Ricevi notifiche dei nuovi messaggi</h4>
+                            <a href="">Attiva notifiche desktop</a>
+                        </div>
+                    </div>
+                    <!--// attiva notiiche  -->
+
+                    <!-- searchbar -->
+                    <form action="/action_page.php">
+                        <div class="button search"><a href="#"><i class="fa fa-search"></i></a></div>
+                        <input type="text" placeholder="cerca o inizia una nuova chat" name="search">
+                    </form>
+                    <!-- //searchbar -->
+                    <div class="elenco-contatti" v-for='(contact, index) in contacts'>
+                        <img :src="'img/avatar'+ contact.avatar + '.jpg'" alt="">
+                        <span>{{contact.name}}</span>
+                    </div>
+
+                </div>
+                <!-- /colonna sx  -->
+
+
+                <!-- colonna dx  -->
+                <div class="col-2">
+
+                </div>
+                <!-- /colonna dx  -->
+
+                
+            </div>
+        </div>
+        <!-- /main container  -->
 
     </div>
-    
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
