--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;900&family=Roboto:wght@400;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&family=Roboto:wght@400;900&display=swap" rel="stylesheet">
     <title>Boolzap</title>
 </head>
 <body class="debug">
@@ -50,14 +50,14 @@
                         <!--// attiva notiiche  -->
     
                         <!-- searchbar -->
-                        <form action="/action_page.php">
+                        <form>
                             <div class="button search"><a href="#"><i class="fa fa-search"></i></a></div>
                             <input type="text" placeholder="cerca o inizia una nuova chat" name="search">
                         </form>
                         <!-- //searchbar -->
                     </div>
                     <div class="container-contatti">
-                        <div class="elenco-contatti" v-for='(contact, index) in contacts'@click='active(index)'>
+                        <div class="elenco-contatti" v-for='(contact, index) in contacts'@click='active(index)' :class="currentUser == index ? 'active-chat' : '' ">
                             <img :src="'img/avatar'+ contact.avatar + '.jpg'" alt="">
                             <span>{{contact.name}}</span>
                         </div>
